--- a/examples/module02/Rockaway.WebApp/Rockaway.WebApp.csproj
+++ b/examples/module02/Rockaway.WebApp/Rockaway.WebApp.csproj
@@ -8,4 +8,11 @@
 	<ItemGroup>
 		<InternalsVisibleTo Include="Rockaway.WebApp.Tests" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
+	</ItemGroup>
 </Project>
