Admin area with view and edit forms is just about there...

--- a/examples/305/rockaway/Rockaway.WebApp/Rockaway.WebApp.csproj
+++ b/examples/305/rockaway/Rockaway.WebApp/Rockaway.WebApp.csproj
@@ -18,11 +18,14 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Remove="styles\styles.scss" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Pages\Shared\" />
   </ItemGroup>
 </Project>
