Updated content for CPH including latest ZIP modules

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Handbook
+title: Modern Web Development with C# and .NET
 description: The online handbook for Dylan Beattie's workshop on modern web development with C# and .NET
 theme: just-the-docs
 
