Updating notes before Porto workshop

--- a/examples/401/rockaway/Rockaway.WebApp/appsettings.Development.json
+++ b/examples/401/rockaway/Rockaway.WebApp/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+	"database" :  "sqlite", 
 	"ConnectionStrings": {
 		"rockaway-mssql-server": "Server=localhost;Database=rockaway;User Id=rockaway_user;Password=3GX9i0F5YPmsa6;TrustServerCertificate=true;"
 	},
