Everything good as far as 400.

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
   - node_modules/
+  - examples/_NCrunch_examples/
   - examples/**/.vs
   - examples/**/obj
   - examples/**/bin
