Scaffolded identity UI and set up admin area.

--- a/examples/402/Rockaway/Rockaway.WebApp/Rockaway.WebApp.csproj
+++ b/examples/402/Rockaway/Rockaway.WebApp/Rockaway.WebApp.csproj
@@ -20,4 +20,7 @@
 	<ItemGroup>
 		<InternalsVisibleTo Include="Rockaway.WebApp.Tests" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
 </Project>
