Tests using authentication for the admin area.

--- a/examples/501/Rockaway/Rockaway.WebApp/appsettings.json
+++ b/examples/501/Rockaway/Rockaway.WebApp/appsettings.json
@@ -7,8 +7,8 @@
 	},
 	"AllowedHosts": "*",
 	"SassCompiler": {
-		"SourceFolder": "wwwroot/scss",
-		"TargetFolder": "wwwroot/css",
+		"Source": "wwwroot/scss",
+		"Target": "wwwroot/css",
 		"Arguments": "--style=compressed",
 		"Configurations": {
 			"Debug": {
