--- a/examples/600/Rockaway/Rockaway.WebApp.Tests/Rockaway.WebApp.Tests.csproj
+++ b/examples/600/Rockaway/Rockaway.WebApp.Tests/Rockaway.WebApp.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AngleSharp" Version="1.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="NodaTime.Testing" Version="3.1.10" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
